--- a/templates/list.html
+++ b/templates/list.html
@@ -11,7 +11,7 @@
     {% for each in object_list %}
     <div class="col">
         <div class="card" style="width: 13rem;">
-            <img src="{{ each.image_url }}" class="card-img-top" alt="...">
+            <img src="{{ each.image }}" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{ each.title|slice:":25"}} ...</h5>
                 <p class="card-text">${{ each.price|floatformat:2 }}</p>                
