--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -30,7 +30,7 @@
 		<div class="row">
 			<div class="col-lg">
 				<br><div class="text-center" style="width: 22rem;">
-					<img src="{{ object.image_url }}" class="card-img">
+					<img src="{{ object.image }}" class="card-img">
 				  </div>
 			</div>
 			<div class="col-lg">
