--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,7 +8,7 @@
 <div class="card mb-3" style="max-width: 840px;">
     <div class="row no-gutters">
       <div class="col-md-4">
-        <img src="{{ object.image_url }}" class="card-img">
+        <img src="{{ object.image }}" class="card-img">
       </div>
       <div class="col-md-8">
         <div class="card-body">
